--- a/app.env
+++ b/app.env
@@ -1,2 +1,5 @@
 HTTP_SERVER_ADDRESS=0.0.0.0:12000
 REDIS_ADDRESS=0.0.0.0:6379
+AWS_REGION=us-west-2
+AWS_BUCKET=ywz-upload
+AWS_S3_USE_ACCELERATE=false
