--- a/app.env
+++ b/app.env
@@ -1,6 +1,7 @@
 HTTP_SERVER_ADDRESS=0.0.0.0:12000
 REDIS_ADDRESS=0.0.0.0:6379
 REDIS_CLUSTER_MODE=false
+REDIS_KEY_DURATION=48h
 AWS_REGION=us-west-2
 AWS_BUCKET=ywz-upload
 AWS_S3_USE_ACCELERATE=false
