--- a/app.env
+++ b/app.env
@@ -5,3 +5,5 @@ REDIS_KEY_DURATION=48h
 AWS_REGION=us-west-2
 AWS_BUCKET=ywz-upload
 AWS_S3_USE_ACCELERATE=false
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
