--- a/app.env
+++ b/app.env
@@ -2,6 +2,8 @@ HTTP_SERVER_ADDRESS=0.0.0.0:12000
 REDIS_ADDRESS=redis-master:6379
 REDIS_CLUSTER_MODE=false
 REDIS_KEY_DURATION=48h
+SECRET_APIKEY=
+
 AWS_REGION=us-west-2
 AWS_BUCKET=ywz-upload
 AWS_S3_USE_ACCELERATE=false
