--- a/app.env
+++ b/app.env
@@ -1,5 +1,5 @@
 HTTP_SERVER_ADDRESS=0.0.0.0:12000
-REDIS_ADDRESS=redis-master:6379
+REDIS_ADDRESS=localhost:6379
 REDIS_CLUSTER_MODE=false
 REDIS_KEY_DURATION=48h
 SECRET_APIKEY=
