--- a/manifests/local/service.yaml
+++ b/manifests/local/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: model-webhook-service
+  name: serving-webhook-service
 spec:
   selector:
-    app: model-webhook
+    app: serving-webhook
   ports:
     - name: control
       protocol: TCP
