--- a/manifests/local/secret.yaml
+++ b/manifests/local/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: webhook-secret
 type: Opaque
 data:
-  access-key-id: base64
-  secret-access-key: base64
+  access-key-id: abc
+  secret-access-key: 123
