Production ready version

--- a/app.env
+++ b/app.env
@@ -4,6 +4,9 @@ REDIS_CLUSTER_MODE=false
 REDIS_KEY_DURATION=48h
 SECRET_APIKEY=
 
+DB_SOURCE=postgresql://root:secret@localhost:5432/serving_webhook?sslmode=disable
+MIGRATION_URL=file://db/migration
+
 AWS_REGION=us-west-2
 AWS_BUCKET=ywz-upload
 AWS_S3_USE_ACCELERATE=false
