--- a/manifests/eks/deployment.yaml
+++ b/manifests/eks/deployment.yaml
@@ -14,9 +14,10 @@ spec:
       labels:
         app: serving-webhook
     spec:
+      serviceAccountName: aws-s3-full
       containers:
         - name: serving-webhook-container
-          image: yangwenz/model-webhook:v2
+          image: 982164572446.dkr.ecr.us-east-2.amazonaws.com/serving-webhook:latest
           imagePullPolicy: Always
           ports:
             - name: control
@@ -26,16 +27,17 @@ spec:
               value: release
             - name: REDIS_ADDRESS
               value: "redis-master:6379"
-            - name: AWS_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: webhook-secret
-                  key: access-key-id
-            - name: AWS_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: webhook-secret
-                  key: secret-access-key
+            - name: AWS_REGION
+              value: "us-east-2"
+            - name: AWS_BUCKET
+              value: "hypergai-upload-tmp"
+          resources:
+            requests:
+              cpu: 2
+              memory: "1Gi"
+            limits:
+              cpu: 2
+              memory: "1Gi"
           livenessProbe:
             httpGet:
               path: /live
