--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,11 @@ jobs:
 
       - name: Build and push Docker image
         id: push
+        env:
+          REPOSITORY: serving-webhook
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: yangwenz/serving-webhook:${{ RELEASE_VERSION }}
+          tags: yangwenz/$REPOSITORY:$RELEASE_VERSION
