--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set github env
+        id: env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
@@ -25,12 +26,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        id: push
-        env:
-          REPOSITORY: serving-webhook
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: yangwenz/$REPOSITORY:$RELEASE_VERSION
+          tags: yangwenz/serving-webhook:${{ steps.env.RELEASE_VERSION }}
